<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">班车查询</string>
    <string name="back">返回</string>
    <string name="empty_routes">暂无路线，点击 + 添加</string>
    <string name="empty_schedules">该路线暂无车次，点击 + 添加</string>
    <string name="add_route">添加路线</string>
    <string name="edit_route">编辑路线</string>
    <string name="add_schedule">添加车次</string>
    <string name="edit_schedule">编辑车次</string>
    <string name="route_name_hint">路线名称</string>
    <string name="origin_hint">始发站</string>
    <string name="destination_hint">终点站</string>
    <string name="save">保存</string>
    <string name="name_required">请输入路线名称</string>
    <string name="origin_required">请输入始发站</string>
    <string name="destination_required">请输入终点站</string>
    <string name="route_saved">路线已保存</string>
    <string name="route_updated">路线已更新</string>
    <string name="route_deleted">已删除「%s」</string>
    <string name="departure_time_hint">发车时间</string>
    <string name="pick_departure">选择发车时间</string>
    <string name="not_set">未设置</string>
    <string name="pick_time">选择时间</string>
    <string name="set_departure_time">请设置发车时间</string>
    <string name="schedule_saved">车次已保存</string>
    <string name="schedule_updated">车次已更新</string>
    <string name="schedule_deleted">车次已删除</string>
    <string name="next_badge">NEXT</string>
    <string name="next_departure_format">距下班车还有 %s</string>
    <string name="time_remaining_hm">%d小时%d分钟</string>
    <string name="time_remaining_m">%d分钟</string>
    <string name="depart_now">即将发车</string>
    <string name="depart_in_hm">%1$d小时%2$d分钟后发车</string>
    <string name="depart_in_m">%d分钟后发车</string>
    <string name="favorite">收藏</string>
    <string name="unfavorite">取消收藏</string>
    <string name="set_default">设为默认</string>
    <string name="unset_default">取消默认</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="confirm_delete_route">确定删除路线「%s」及其所有车次？</string>
    <string name="confirm_delete_schedule">确定删除该车次？</string>
    <string name="action_export">导出</string>
    <string name="action_import">导入</string>
    <string name="export_success">已复制到剪贴板</string>
    <string name="import_success">导入成功</string>
    <string name="import_error">导入失败，剪贴板内容无效</string>
    <string-array name="hours">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="minutes">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
</resources>
